# mini-rag-students

./: .env.example  .gitignore  API_QUICK_REFERENCE.md  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: file_routes.py  routes.py
backend/app/core/: config.py
backend/app/schemas/: file_schemas.py
backend/app/services/: document_service.py  storage_service.py  vector_service.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  i18n.js
frontend/src/components/: LanguageSwitcher.css  LanguageSwitcher.js
frontend/src/locales/: en.json  he.json
minio-init/: init-bucket.sh
